--- a/app/scss/sections/catalog.scss
+++ b/app/scss/sections/catalog.scss
@@ -1,5 +1,5 @@
 .catalog {
-  margin-top: calc(90 / 1920 * 100vw);
+  margin-top: calc(90 / var(--screensize) * 100vw);
 }
 
 .catalog__content {
@@ -7,15 +7,15 @@
 }
 
 .catalog__content__filters {
-  max-width: calc(260 / 1920 * 100vw);
+  max-width: calc(260 / var(--screensize) * 100vw);
   width: 100%;
 }
 
 .filter_block__heading {
-  font-size: calc(16 / 1920 * 100vw);
+  font-size: calc(16 / var(--screensize) * 100vw);
   font-weight: 700;
   border-bottom: 1px solid rgba(211, 211, 211, 0.5);
-  padding-bottom: calc(14 / 1920 * 100vw);
+  padding-bottom: calc(14 / var(--screensize) * 100vw);
   cursor: pointer;
 }
 
@@ -71,7 +71,7 @@
 
 
 .catalogs__content__prods {
-  max-width: calc(1150 / 1920 * 100vw);
+  max-width: calc(1150 / var(--screensize) * 100vw);
   width: 100%;
   margin-left: auto;
 }
@@ -82,7 +82,7 @@
   justify-content: space-between;
 
   .products__item {
-    margin-bottom: calc(20 / 1920 * 100vw);
+    margin-bottom: calc(20 / var(--screensize) * 100vw);
   }
 }
 
@@ -130,8 +130,8 @@
   -ms-flex-align: center;
   align-items: center;
   border-bottom: 1px solid rgba(255, 255, 255, .6);
-  padding: calc(15 / 1920 * 100vw) 0;
-  font-size: calc(16 / 1920 * 100vw);
+  padding: calc(15 / var(--screensize) * 100vw) 0;
+  font-size: calc(16 / var(--screensize) * 100vw);
 }
 
 .catalog__control-panel__show {
@@ -162,7 +162,7 @@
   -webkit-align-items: center;
   -ms-flex-align: center;
   align-items: center;
-  margin-left: calc(10 / 1920 * 100vw);
+  margin-left: calc(10 / var(--screensize) * 100vw);
 }
 
 .catalog__control-panel__show ul li {
@@ -183,12 +183,12 @@
 }
 
 .catalog__control-panel__show ul li a {
-  font-size: calc(16 / 1920 * 100vw);
+  font-size: calc(16 / var(--screensize) * 100vw);
   font-weight: 500;
   color: rgba(255, 255, 255, 0.6);
   border-radius: 50%;
-  width: calc(38 / 1920 * 100vw);
-  height: calc(38 / 1920 * 100vw);
+  width: calc(38 / var(--screensize) * 100vw);
+  height: calc(38 / var(--screensize) * 100vw);
   display: -webkit-box;
   display: -webkit-flex;
   display: -ms-flexbox;
@@ -224,20 +224,20 @@
 .catalog__control-panel__sort select {
   background: #393840;
   color: rgba(255, 255, 255, 0.5);
-  padding: 0 calc(22 / 1920 * 100vw);
-  width: calc(185 / 1920 * 100vw);
-  height: calc(38 / 1920 * 100vw);
+  padding: 0 calc(22 / var(--screensize) * 100vw);
+  width: calc(185 / var(--screensize) * 100vw);
+  height: calc(38 / var(--screensize) * 100vw);
   display: flex;
   align-items: center;
   font-weight: 300;
-  margin-left: calc(22 / 1920 * 100vw);
-  border-radius: calc(5 / 1920 * 100vw);
+  margin-left: calc(22 / var(--screensize) * 100vw);
+  border-radius: calc(5 / var(--screensize) * 100vw);
   color: white;
-  font-size: calc(14 / 1920 * 100vw);
+  font-size: calc(14 / var(--screensize) * 100vw);
   background-image: url(../images/icons/arr-down.svg);
-  background-position: 90% calc(15 / 1920 * 100vw);
+  background-position: 90% calc(15 / var(--screensize) * 100vw);
   background-repeat: no-repeat;
-  padding-right: calc(30 / 1920 * 100vw);
+  padding-right: calc(30 / var(--screensize) * 100vw);
   -webkit-appearance: none;
   -moz-appearance: none;
   appearance: none;
